1999-11-06  Harlan Stenn  <stenn@whimsy.udel.edu>

	* acconfig.h: RELIANTUNIX_CLOCK
	* configure.in (ac_cv_var_tickadj): RELIANTUNIX_CLOCK
	* libntp/systime.c (adj_systime): Reliant patches
	From: Andrej Borsenkow <Andrej.Borsenkow@mow.siemens.ru>

1999-11-05  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/refclock_parse.c (parse_start): ASYNC_PPS_CD_NEG cleanup
	* configure.in (ac_cv_make_ntptime): OK on Linux
	From: <Ulrich.Windl@rz.uni-regensburg.de>

	* configure.in: NetBSD has PPSAPI now
	F_SETOWN is needed for NetBSD
	From: Jonathan Stone <jonathan@dsg.stanford.edu>

1999-11-02  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.98d

	* ntpd/refclock_parse.c: Cleanup/fixes
	From: John Hay <jhay@mikom.csir.co.za>

	* ntpd/refclock_parse.c: Lose #include "ntp_select.h"
	* ntpd/ntpd.c: Lose #include "ntp_select.h"
	* ntpd/ntp_io.c: Lose #include "ntp_select.h"
	* ntpd/ntp_intres.c: Lose #include "ntp_select.h"
	* libntp/iosignal.c: Lose #include "ntp_select.h"
	* include/ntpd.h: #include "ntp_select.h" for declaration of activefds
	Reported by: Christian Krackowizer <kra1@technodat.co.at> 

1999-11-01  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.98c

	* libntp/syssignal.c: Don't warn about SA_RESTART
	* libntp/recvbuff.c: Fix free buffer count
	From: Jeffrey C Honig <jch@bsdi.com>

	* html/pps.htm: 
	* html/howto.htm: 
	* html/confopt.htm: 
	* html/clockopt.htm: 
	* html/uthopt.htm:
	Updates.
	From: Dave Mills <mills@udel.edu>

	* ntpd/refclock_wwvb.c: burst fixes
	* ntpd/refclock_ulink.c: burst fixes
	* ntpd/refclock_tpro.c: burst and NSTAGE fixes
	* ntpd/refclock_pst.c: burst fixes
	* ntpd/refclock_irig.c: SAMPLE -> SAMPLES
	* ntpd/refclock_heath.c: burst fixes
	* ntpd/refclock_dumbclock.c: burst fixes
	* ntpd/refclock_chronolog.c: burst fixes
	* ntpd/refclock_bancomm.c: burst fixes
	* ntpd/refclock_atom.c: burst fixes
	* ntpd/refclock_as2201.c: burst fixes
	* ntpd/ntp_refclock.c: PPSAPI, code, and comment cleanup/fixes